force-app/main/default/objects/vlocity_ps__TimePlan__c/fields/vlocity_ps__FrequencyUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FrequencyUnitOfMeasure__c</fullName>
    <description>Reserved for future use.</description>
    <label>Frequency UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>