force-app/main/default/objects/vlocity_ps__TimePlan__c/fields/vlocity_ps__Repeat__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Repeat__c</fullName>
    <description>Reserved for future use.</description>
    <label>Repeat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>