force-app/main/default/objects/vlocity_ps__TimePlan__c/fields/vlocity_ps__TotalDuration__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TotalDuration__c</fullName>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>