force-app/main/default/objects/vlocity_ps__TimePlan__c/fields/vlocity_ps__TotalDurationUoM__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TotalDurationUoM__c</fullName>
    <label>Total Duration Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>