force-app/main/default/objects/vlocity_ps__TimePlan__c/listViews/vlocity_ps__Vlocity_EPC_Time_Plan_List.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__Vlocity_EPC_Time_Plan_List</fullName>
    <columns>vlocity_ps__IsActive__c</columns>
    <columns>NAME</columns>
    <columns>vlocity_ps__TotalDuration__c</columns>
    <columns>vlocity_ps__TotalDurationUoM__c</columns>
    <columns>vlocity_ps__EffectiveStartDate__c</columns>
    <columns>vlocity_ps__EffectiveEndDate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Vlocity EPC Time Plan List</label>
</ListView>